--- a/src/components/TrafficNow.module.scss
+++ b/src/components/TrafficNow.module.scss
@@ -5,7 +5,7 @@
   flex-wrap: wrap;
 
   display: grid;
-  grid-template-columns: repeat(auto-fit, 180px);
+  grid-template-columns: repeat(auto-fit, 48%);
   grid-gap: 10px;
 
   .sec {
